add error middleware
